# src/Functions/Http/GetDrawResults/Extensions/ParsingExtensions.cs
@@ -1,11 +1,11 @@
 ﻿using System.Globalization;
-using LottoDrawHistory.Application;
+using Lotto.Application;
 
-namespace LottoDrawHistory.Functions.Http.GetDrawResults.Extensions;
+namespace Lotto.Functions.Http.GetDrawResults.Extensions;
 
 internal static class ParsingExtensions
 {
-    public static GetHistoricalDrawResultsQuery ParseQueryString(this HttpRequest req)
+    public static GetDrawResultsQuery ParseQueryString(this HttpRequest req)
     {
         DateOnly? dateFrom = null;
         DateOnly? dateTo = null;
@@ -20,7 +20,7 @@ internal static class ParsingExtensions
         if (req.Query.TryGetValue("top", out var topStr) && int.TryParse(topStr, out var parsedTopValue))
             top = parsedTopValue;
 
-        return new GetHistoricalDrawResultsQuery(dateFrom, dateTo, top);
+        return new GetDrawResultsQuery(dateFrom, dateTo, top);
     }
 
     private static bool TryParseDate(this IQueryCollection query, string name, out DateOnly date)
